Add instructions for JDK >= 16
This suggestions is based on [this](https://github.com/mefellows/sbt-dotenv/issues/104#issuecomment-846759580) solution to exceptions with JDK 16.